--- a/src/global.css
+++ b/src/global.css
@@ -4,3 +4,19 @@
 	margin: 0;
 	max-width: 100%;
 }
+
+@keyframes heart {
+	0% {
+		transform: scale(1);
+		opacity: 0;
+	}
+	80% {
+		transform: scale(4);
+		opacity: 0.7;
+	}
+	100% {
+		transform: scale(3);
+		color: #f45e55;
+		opacity: 1;
+	}
+}
