--- a/src/global.css
+++ b/src/global.css
@@ -1,3 +1,4 @@
+/* Global Reset */
 * {
 	box-sizing: border-box;
 	padding: 0;
@@ -5,6 +6,42 @@
 	max-width: 100%;
 }
 
+/* Scrollbar */
+::-webkit-scrollbar {
+	width: 0px;
+}
+#scrollbar__container {
+	position: fixed;
+	width: 10px;
+	height: 100%;
+	top: 0;
+	right: 0;
+	z-index: 980;
+}
+#scrollbar {
+	position: absolute;
+	width: 10px;
+	height: 50px;
+	top: 0;
+	right: 0;
+	animation: rainbow 10s linear infinite;
+	background: linear-gradient(to top, #008aff, #00ffe7);
+	border-radius: 50px 0 0 50px;
+	z-index: 981;
+}
+
+/* Rainbow scrollbar animation */
+@keyframes rainbow {
+	0%,
+	100% {
+		filter: hue-rotate(0deg);
+	}
+	50% {
+		filter: hue-rotate(360deg);
+	}
+}
+
+/* Favourite animation */
 @keyframes heart {
 	0% {
 		transform: scale(1);
