--- a/src/global.css
+++ b/src/global.css
@@ -1,4 +1,7 @@
-/* Global Reset */
+/*
+ * Global Reset
+ * @modifies: *
+ */
 * {
 	box-sizing: border-box;
 	padding: 0;
@@ -6,10 +9,17 @@
 	max-width: 100%;
 }
 
-/* Scrollbar */
+/*
+ * Scrollbar styles
+ * @modifies: ::-webkit-scrollbar
+ * @modifies: #scrollbar__container
+ * @modifies: #scrollbar
+ */
+
 ::-webkit-scrollbar {
 	width: 0px;
 }
+
 #scrollbar__container {
 	position: fixed;
 	width: 10px;
@@ -30,7 +40,12 @@
 	z-index: 981;
 }
 
-/* Rainbow scrollbar animation */
+/*
+ * Animations
+ * @child: rainbow
+ * @child: pulse
+ */
+
 @keyframes rainbow {
 	0%,
 	100% {
@@ -41,8 +56,7 @@
 	}
 }
 
-/* Favourite animation */
-@keyframes heart {
+@keyframes pulse {
 	0% {
 		transform: scale(1);
 		opacity: 0;
